db-cluster/users/k8s-cluster2/ns-pengseangsim10-gmail-com-17193cce/lala/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: lala-tcp
  namespace: ns-pengseangsim10-gmail-com-17193cce
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`lala.seang.shop`)
    services:
    - name: lala-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
